--- a/Front/package.json
+++ b/Front/package.json
@@ -44,6 +44,7 @@
     "save-deps": "rm -rf node_modules && npm update --save && npm update --save-dev"
   },
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
