--- a/Front/package.json
+++ b/Front/package.json
@@ -45,8 +45,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "redux": "^4.0.4"
   }
 }
