--- a/Back/symfoAPE/composer.json
+++ b/Back/symfoAPE/composer.json
@@ -31,6 +31,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "nelmio/alice": "^3.5",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
