--- a/Back/symfoAPE/.env
+++ b/Back/symfoAPE/.env
@@ -24,7 +24,7 @@ APP_SECRET=39eeddbcbaf2a321cd37143c67a54828
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://thalmafa_rockets:RocketIsBestOf2019@62.210.119.216:2031/thalmafa_rockets
+DATABASE_URL=mysql://thalmafa:RocketIsBestOf2019@62.210.119.216/apedb
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
