--- a/Back/symfoAPE/composer.json
+++ b/Back/symfoAPE/composer.json
@@ -21,6 +21,7 @@
         "symfony/orm-pack": "*",
         "symfony/process": "4.3.*",
         "symfony/security-bundle": "4.3.*",
+        "symfony/serializer": "4.3.*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/translation": "4.3.*",
@@ -51,7 +52,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "": "src/"
         }
     },
     "replace": {
