--- a/Front/package.json
+++ b/Front/package.json
@@ -48,6 +48,7 @@
     "@material-ui/icons": "^4.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-awesome-slider": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
