--- a/Back/symfoAPE/src/DataFixtures/fixtures.yml
+++ b/Back/symfoAPE/src/DataFixtures/fixtures.yml
@@ -30,8 +30,8 @@ App\Entity\PrivatePost:
         #author: '@user*'
 
 App\Entity\Role:
-    role_:
-        role: '<randomElement($roleArray)>' 
+    role_{1..4}:
+        role (unique): '<randomElement($roleArray)>' 
 
 App\Entity\Tag: 
     tag_{1..5}:
