--- a/Front/package.json
+++ b/Front/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-awesome-slider": "^1.0.1",
