--- a/Back/symfoAPE/src/DataFixtures/fixtures.yml
+++ b/Back/symfoAPE/src/DataFixtures/fixtures.yml
@@ -20,8 +20,9 @@ App\Entity\News:
         title: '<sentence()>' 
         content: '<paragraph()>' 
         createdAt: '<dateTimeBetween("-200 days", "now")>'
-        #tags: '2x @tag*'
-        #author: '@user*'
+        tags: '<numberBetween(1, 3)>x @tag*'
+        user: '@user*'
+        #media: '@media*'
 
 App\Entity\PrivatePost:
     privatepost_{1..15}:  
@@ -53,3 +54,4 @@ App\Entity\Event:
         content: '<paragraph()>' 
         createdAt: '<dateTimeBetween("-200 days", "now")>'
         date: '<dateTimeBetween("now", "200 days")>'
+        author: '@user*'
