--- a/Front/package.json
+++ b/Front/package.json
@@ -48,6 +48,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
     "axios": "^0.19.0",
+    "nuka-carousel": "^4.5.9",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-awesome-slider": "^1.0.1",
