--- a/Back/symfoAPE/src/DataFixtures/fixtures.yml
+++ b/Back/symfoAPE/src/DataFixtures/fixtures.yml
@@ -9,11 +9,15 @@ App\Entity\Child:
         class: '<randomElement($classArray)>' 
         parents: '<numberBetween(1, 2)>x @user*'
 
-App\Entity\Media:
-    media_{1..20}:
+App\Entity\Medium:
+    medium_{1..20}:
         title: '<word()>' 
         type: '<fileExtension()>'
         url: '<imageUrl()>'
+        news: '25%? @news*'
+        privatepost: '25%? @privatepost*'
+        event: '25%? @event*'
+        
    
 App\Entity\News:
     news_{1..10}:
@@ -22,13 +26,11 @@ App\Entity\News:
         createdAt: '<dateTimeBetween("-200 days", "now")>'
         tags: '<numberBetween(1, 3)>x @tag*'
         user: '@user*'
-        #media: '@media*'
-
+      
 App\Entity\PrivatePost:
     privatepost_{1..15}:  
         title (unique): '<sentence()>' 
         content (unique): '<paragraph()>' 
-        #author: '@user*'
         
 App\Entity\Role:
     role_{1..4}:
