--- a/Front/package.json
+++ b/Front/package.json
@@ -47,6 +47,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
+    "@material-ui/system": "^4.3.1",
     "axios": "^0.19.0",
     "nuka-carousel": "^4.5.9",
     "prop-types": "^15.7.2",
