--- a/Front/package.json
+++ b/Front/package.json
@@ -54,6 +54,7 @@
     "react": "^16.8.6",
     "react-awesome-slider": "^1.0.1",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.1.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
