--- a/Back/symfoAPE/.env
+++ b/Back/symfoAPE/.env
@@ -33,3 +33,9 @@ DATABASE_URL=mysql://thalmafa:RocketIsBestOf2019@62.210.119.216/apedb
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=rocket
+###< lexik/jwt-authentication-bundle ###
