--- a/Back/symfoAPE/composer.json
+++ b/Back/symfoAPE/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "fzaninotto/faker": "^1.8",
         "jms/serializer-bundle": "^3.4",
+        "lexik/jwt-authentication-bundle": "^2.6",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
