--- a/Back/symfoAPE/src/DataFixtures/fixtures.yml
+++ b/Back/symfoAPE/src/DataFixtures/fixtures.yml
@@ -21,6 +21,7 @@ App\Entity\News:
         createdAt: '<dateTimeBetween("-200 days", "now")>'
         tags: '<numberBetween(1, 3)>x @tag*'
         user: '@user*'
+        slug (unique): '<randomElement($slugArray)>' 
       
 App\Entity\PrivatePost:
     privatepost_{1..15}:  
@@ -38,9 +39,10 @@ App\Entity\Tag:
 App\Entity\User: 
     user_{1..50}:
         email (unique): '<email()>' 
+        username (unique): '<userName()>'
         password: '<password()>'
-        lastname: '<lastname()>' 
-        firstname: '<firstname()>' 
+        lastname: '<lastName()>' 
+        firstname: '<firstName()>' 
         is_active: '<boolean()>'
         is_parent: '<boolean()>'
 
