--- a/Back/symfoAPE/src/DataFixtures/fixtures.yml
+++ b/Back/symfoAPE/src/DataFixtures/fixtures.yml
@@ -20,7 +20,7 @@ App\Entity\News:
         content: '<paragraph()>' 
         createdAt: '<dateTimeBetween("-200 days", "now")>'
         tags: '<numberBetween(1, 3)>x @tag*'
-        user: '@user*'
+        author: '@user*'
         slug (unique): '<randomElement($slugArray)>' 
       
 App\Entity\PrivatePost:
