--- a/Front/package.json
+++ b/Front/package.json
@@ -51,7 +51,11 @@
     "axios": "^0.19.0",
     "nuka-carousel": "^4.5.9",
     "prop-types": "^15.7.2",
+    "query-string": "^6.8.2",
+    "ra-data-json-server": "^2.9.5",
+    "ra-input-rich-text": "^2.9.3",
     "react": "^16.8.6",
+    "react-admin": "^2.9.5",
     "react-awesome-slider": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.1.0",
