--- a/Back/symfoAPE/config/packages/security.yaml
+++ b/Back/symfoAPE/config/packages/security.yaml
@@ -1,7 +1,6 @@
 security:
     encoders:
-        App\Entity\User:
-            algorithm: auto
+       Symfony\Component\Security\Core\User\User: plaintext
 
     role_hierarchy:
         ROLE_PARENT: ROLE_USER
@@ -12,24 +11,36 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
+        in_memory:
+            memory:
+                users:
+                    ryan:
+                        password: ryanpass
+                        roles: 'ROLE_USER'
+                    admin:
+                        password: kitten
+                        roles: 'ROLE_ADMIN'
+        # app_user_provider:
+        #     entity:
+        #         class: App\Entity\User
+        #         property: email
         # used to reload user from session & other features (e.g. switch_user)
         
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        login:
-            pattern:  ^/api/login
-            stateless: true
-            anonymous: true
-            json_login:
-                check_path:               /api/login_check
-                success_handler:          lexik_jwt_authentication.handler.authentication_success
-                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+        #login:
+            #pattern:  ^/api/login
+            #stateless: true
+            #anonymous: true
+        main: 
+            http_basic:
+                provider: in_memory
+            # json_login:
+            #     check_path:               /api/login_check
+            #     success_handler:          lexik_jwt_authentication.handler.authentication_success
+            #     failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 #
 #        api:
 #            pattern:   ^/api
@@ -41,7 +52,12 @@ security:
 #    # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/admin, roles: ROLE_ADMIN }
+        - { path: ^/api/profil, roles: ROLE_USER }
+        - { path: ^/api/redact, roles: ROLE_REDACT }
+        - { path: ^/api/media, roles: ROLE_PARENT}
+
+
 #        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+
