--- a/Back/symfoAPE/composer.json
+++ b/Back/symfoAPE/composer.json
@@ -20,6 +20,7 @@
         "symfony/http-client": "4.3.*",
         "symfony/http-foundation": "4.3.*",
         "symfony/intl": "4.3.*",
+        "symfony/mailer": "4.3.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
         "symfony/process": "4.3.*",
