--- a/Front/package.json
+++ b/Front/package.json
@@ -44,6 +44,8 @@
     "save-deps": "rm -rf node_modules && npm update --save && npm update --save-dev"
   },
   "dependencies": {
+    "@api-platform/admin": "^0.6.3",
+    "@api-platform/api-doc-parser": "^0.7.2",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
