Mon profil-done with tabs adn content and photo gallery

--- a/Front/package.json
+++ b/Front/package.json
@@ -64,7 +64,9 @@
     "react-admin": "^2.9.5",
     "react-awesome-slider": "^1.0.1",
     "react-dom": "^16.8.6",
+    "react-images": "^1.0.0",
     "react-markdown": "^4.1.0",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
