--- a/Front/package.json
+++ b/Front/package.json
@@ -52,6 +52,7 @@
     "axios": "^0.19.0",
     "history": "^4.9.0",
     "i18n": "^0.8.3",
+    "material-ui-popup-state": "^1.4.0",
     "nuka-carousel": "^4.5.9",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.2",
