--- a/Back/symfoAPE/src/Entity/security.yaml
+++ b/Back/symfoAPE/src/Entity/security.yaml
@@ -1,4 +1,3 @@
-# api/config/packages/security.yaml
 security:
     encoders:
         App\Entity\User:
@@ -11,21 +10,32 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
-
     firewalls:
         dev:
-            pattern: ^/_(profiler|wdt)
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+
+#        main:
+#            pattern: ^/
+#            anonymous: true
+#
+        login:
+            pattern:  ^/api/login
             stateless: true
             anonymous: true
-            provider: app_user_provider
             json_login:
-                check_path: /authentication_token
-                username_path: email
-                password_path: password
-                success_handler: lexik_jwt_authentication.handler.authentication_success
-                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                check_path:               /api/login_check
+                success_handler:          lexik_jwt_authentication.handler.authentication_success
+                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+        
+        register:
+            pattern:  ^/api/register
+            security: false
+        
+        api:
+            pattern:   ^/api
+            stateless: true
+            anonymous: true
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
@@ -37,6 +47,7 @@ security:
        - { path: ^/api/events, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
        - { path: ^/api/news, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
        - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
+       - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
 
     role_hierarchy:
         ROLE_PARENT: ROLE_USER
