minor changes security.yaml

--- a/Back/symfoAPE/config/packages/security.yaml
+++ b/Back/symfoAPE/config/packages/security.yaml
@@ -14,7 +14,10 @@ security:
 
     firewalls:
         dev:
-            pattern: ^/_(profiler|wdt)
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+        register:
+            pattern:  ^/api/register
             security: false
         main:
             stateless: true
