--- a/Back/symfoAPE/config/packages/security.yaml
+++ b/Back/symfoAPE/config/packages/security.yaml
@@ -37,10 +37,10 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-       - { path: ^/api/events, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
-       - { path: ^/api/news, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
-       - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
-
+       - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY }
+#       - { path: ^/api/events, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
+#       - { path: ^/api/news, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
+       
     role_hierarchy:
         ROLE_PARENT: ROLE_USER
         ROLE_REDACT: ROLE_PARENT
