--- a/Back/symfoAPE/config/packages/security.yaml
+++ b/Back/symfoAPE/config/packages/security.yaml
@@ -37,7 +37,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-       - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY }
+       - { path: ^/api/profile/users, roles: IS_AUTHENTICATED_FULLY }
 #       - { path: ^/api/events, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
 #       - { path: ^/api/news, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
        
